// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/STRING.proto";


package editor.protobuf;

message DocumentValue {
extensions 4 to 104;

  optional ccsds_mal.protobuf.STRING docPath = 1;
  optional ccsds_mal.protobuf.LONG docId = 2;
  optional ccsds_mal.protobuf.LONG parentDocId = 3;
}
